--- a/native-script/package.json
+++ b/native-script/package.json
@@ -13,7 +13,11 @@
     "repository": "https://github.com/mackode/localized-reminders.git",
     "dependencies": {
         "nativescript-theme-core": "~1.0.4",
-        "tns-core-modules": "~4.2.0"
+        "tns-core-modules": "^4.2.0"
     },
-    "readme": "NativeScript Application"
+    "readme": "NativeScript Application",
+    "devDependencies": {
+        "nativescript-dev-typescript": "^0.7.2",
+        "typescript": "^3.0.1"
+    }
 }
