--- a/native-script/package.json
+++ b/native-script/package.json
@@ -1,23 +1,37 @@
 {
-    "nativescript": {
-        "id": "org.nativescript.nativescript",
-        "tns-android": {
-            "version": "4.2.0"
-        },
-        "tns-ios": {
-            "version": "4.2.0"
-        }
+  "nativescript": {
+    "id": "org.nativescript.nativescript",
+    "tns-android": {
+      "version": "4.2.0"
     },
-    "description": "NativeScript Application",
-    "license": "SEE LICENSE IN README",
-    "repository": "https://github.com/mackode/localized-reminders.git",
-    "dependencies": {
-        "nativescript-theme-core": "~1.0.4",
-        "tns-core-modules": "^4.2.0"
-    },
-    "readme": "NativeScript Application",
-    "devDependencies": {
-        "nativescript-dev-typescript": "^0.7.2",
-        "typescript": "^3.0.1"
+    "tns-ios": {
+      "version": "4.2.0"
     }
+  },
+  "description": "NativeScript Application",
+  "license": "SEE LICENSE IN README",
+  "repository": "https://github.com/mackode/localized-reminders.git",
+  "dependencies": {
+    "nativescript-angular": "^6.1.0",
+    "nativescript-theme-core": "~1.0.4",
+    "tns-core-modules": "^4.2.0",
+    "@angular/platform-browser-dynamic": "~6.1.0",
+    "@angular/common": "~6.1.0",
+    "@angular/compiler": "~6.1.0",
+    "@angular/core": "~6.1.0",
+    "@angular/forms": "~6.1.0",
+    "@angular/http": "~6.1.0",
+    "@angular/platform-browser": "~6.1.0",
+    "@angular/router": "~6.1.0",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
+  },
+  "readme": "NativeScript Application",
+  "devDependencies": {
+    "@angular/compiler-cli": "~6.1.0",
+    "@ngtools/webpack": "~6.1.0",
+    "nativescript-dev-typescript": "^0.7.2",
+    "nativescript-dev-webpack": "^0.15.1",
+    "typescript": "~2.7.2"
+  }
 }
