NativeScript: convert NativeScript + JavaScript to NativeScript + TypeScript + Angular version

--- a/native-script/package.json
+++ b/native-script/package.json
@@ -12,18 +12,21 @@
   "license": "SEE LICENSE IN README",
   "repository": "https://github.com/mackode/localized-reminders.git",
   "dependencies": {
-    "nativescript-angular": "^6.1.0",
-    "nativescript-theme-core": "~1.0.4",
-    "tns-core-modules": "^4.2.0",
-    "@angular/platform-browser-dynamic": "~6.1.0",
+    "@angular/animations": "~6.1.0",
     "@angular/common": "~6.1.0",
     "@angular/compiler": "~6.1.0",
     "@angular/core": "~6.1.0",
     "@angular/forms": "~6.1.0",
     "@angular/http": "~6.1.0",
     "@angular/platform-browser": "~6.1.0",
+    "@angular/platform-browser-dynamic": "~6.1.0",
     "@angular/router": "~6.1.0",
-    "rxjs": "^6.0.0",
+    "jssha": "^2.3.1",
+    "nativescript-angular": "^6.1.0",
+    "nativescript-theme-core": "~1.0.4",
+    "reflect-metadata": "~0.1.8",
+    "rxjs": "^6.1.0",
+    "tns-core-modules": "^4.2.0",
     "zone.js": "^0.8.26"
   },
   "readme": "NativeScript Application",
