--- a/native-script/package.json
+++ b/native-script/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "~0.1.8",
     "rxjs": "^6.1.0",
     "tns-core-modules": "^4.2.0",
+    "tns-platform-declarations": "^4.2.0",
     "zone.js": "^0.8.26"
   },
   "readme": "NativeScript Application",
