--- a/native-script/package.json
+++ b/native-script/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~6.1.0",
     "jssha": "^2.3.1",
     "nativescript-angular": "^6.1.0",
+    "nativescript-floatingactionbutton": "^4.1.4",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.8",
     "rxjs": "^6.1.0",
