--- a/native-script/app/App_Resources/Android/app.gradle
+++ b/native-script/app/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "__PACKAGE__" 
+    applicationId = "pl.mackode.localized_reminders" 
     
     //override supported platforms
     // ndk {
